--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -1,11 +1,4 @@
-general:
-  iflowName: flow1
-  iflowVersion: 1.0.1
-
 steps:
   integrationArtifactGetMplStatus:
-    cpiCredentialsId: roverpocOauthCred
+    cpiApiServiceKeyCredentialsId: roverpocServiceKeyCred
     integrationFlowId: flow1
-    platform: cf
-    host: https://roverpoc.it-accd002.cfapps.sap.hana.ondemand.com
-    oAuthTokenProviderUrl: https://roverpoc.authentication.sap.hana.ondemand.com/oauth/token
